<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="titulo"
            type="String" />

        <variable
            name="sinopse"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="wrap"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ilhadasrosas" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/gradiente"
                android:translationZ="1dp"
                app:layout_constraintBottom_toBottomOf="@id/poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titulo_tv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="A Incrível História da Ilha das Rosas"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="@id/poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/age"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"
                android:padding="4sp"
                android:textColor="@color/black"
                android:text="+18"
                android:background="@drawable/button_age"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titulo_tv"
                tools:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/butStar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/age"
                app:layout_constraintEnd_toEndOf="parent"
                android:textOff=""
                android:textOn=""
                android:onClick="inFavorite"
                android:gravity="center_horizontal"
                android:button="@drawable/custom_checkbox" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/relogio"
                android:text=" 118 min"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titulo_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/calendar"
                android:text=" 2020"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/duration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="10dp"
                android:text="Produtora:"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sinopse_tv"
                tools:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Warner Bros."
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/producer"
                app:layout_constraintTop_toBottomOf="@id/sinopse_tv"
                tools:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/g_nero_drama"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company"
                tools:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genero2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginRight="10dp"
                android:text="Drama."
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/genero"
                app:layout_constraintTop_toBottomOf="@id/company"
                tools:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sinopse_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/texto_sinopse"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ano" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressTint="#FFC107"
                android:progressBackgroundTint="#808080"
                android:secondaryProgressTint="#FFEB3B"
                android:stepSize="0.1"
                android:scaleX="0.5"
                android:scaleY="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genero2"
                tools:rating="3.5"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rating_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stars"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="3.5"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/rating_name"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OMNIFLIX®"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/value"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

    <!--            <androidx.appcompat.widget.AppCompatButton-->
    <!--                android:id="@+id/butAssistir"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginTop="20dp"-->
    <!--                android:background="@drawable/botao_voltar"-->
    <!--                android:padding="0dp"-->
    <!--                android:onClick="getUrlFromIntent"-->
    <!--                android:text="+ DETALHES"-->
    <!--                android:textColor="@color/black"-->
    <!--                app:layout_constraintEnd_toEndOf="parent"-->
    <!--                app:layout_constraintStart_toStartOf="parent"-->
    <!--                app:layout_constraintTop_toBottomOf="@id/value" />-->